Less draconian fix for long town names. Just truncate them in the UI.

--- a/source/stonehearth_data/mods/stonehearth/ui/shell/title/title.less
+++ b/source/stonehearth_data/mods/stonehearth/ui/shell/title/title.less
@@ -107,7 +107,10 @@
             }
 
             .name {
+               .nobr;
                font-size: 36px;
+               max-width: 550px;
+               overflow: hidden;
             }
 
             .gameTime {
